# datum-gateway-hooked

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.hooked.md  README.md
.github/workflows/: build.yaml
cmake/script/: EmbedResources.cmake  GenerateBuildInfo.cmake  VerifyExample.cmake
debian/: changelog  control  copyright  rules
doc/: example_datum_gateway_config.json  usernames.md
src/: datum_api.c  datum_api.h  datum_blocktemplates.c  datum_blocktemplates.h  datum_coinbaser.c  datum_coinbaser.h  datum_conf.c  datum_conf.h  datum_conf_tests.c  datum_gateway.c  datum_gateway.h  datum_hook.c  datum_hook.h  datum_jsonrpc.c  datum_jsonrpc.h  datum_logger.c  datum_logger.h  datum_protocol.c  datum_protocol.h  datum_queue.c  datum_queue.h  datum_sockets.c  datum_sockets.h  datum_stratum.c  datum_stratum.h  datum_stratum_dupes.c  datum_stratum_dupes.h  datum_stratum_tests.c  datum_submitblock.c  datum_submitblock.h  datum_utils.c  datum_utils.h  datum_utils_tests.c  thirdparty_base58.c  thirdparty_base58.h  thirdparty_segwit_addr.c
www/: auth_failed.html  clients_top.html  coinbaser_top.html  config.html  config_errors.html  config_restart.html  foot.html  home.html  threads_top.html
www/assets/: post.js  style.css
